--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,12 +30,12 @@ dependencies {
 
 application {
     // Define the main class for the application.
-    mainClass = 'dnd.mainsheet'
+    mainClass = 'dnd.MainSheet'
     
 }
 
 run {
-    main = "dnd.mainsheet"
+    main = "dnd.MainSheet"
     standardInput = System.in
 }
 
@@ -66,7 +66,7 @@ jar {
     manifest {
         attributes 'Implementation-Title': 'CharacterSheet',
            'Implementation-Version': '1.0',
-            'Main-Class': 'dnd.mainsheet'
+            'Main-Class': 'dnd.MainSheet'
     }
     from { configurations.runtimeClasspath.collect {
         it.isDirectory() ? it : !it.path.endsWith('.pom') ? zipTree(it) : it } }
